[package]
name = "inscriptionless-inscription"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.6"
bitcoind = "0.36.1"
bitcoind-async-client = {git = "https://github.com/0xBEEFCAF3/bitcoind-async-client", branch = "mempool-methods"}
log = "0.4.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.96"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
hex = "0.4.3"
rand = "0.8.5"

